# nlp-nexus

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  download_data.py  requirements.txt  setup.cfg  setup.py
Sentiment-Analysis/: README.md
Sentiment-Analysis/api/: Dockerfile  app.py  requirements.txt
Sentiment-Analysis/data/processed/: README.md
Sentiment-Analysis/data/raw/: dataset_dict.json
Sentiment-Analysis/data/raw/full/: dataset_info.json  state.json
Sentiment-Analysis/logs/: READMD.md
Sentiment-Analysis/models/pretrained-models/: README.md
Sentiment-Analysis/models/saved-models/: README.md
Sentiment-Analysis/references/papers/: README.md
Sentiment-Analysis/results/: README.md
Sentiment-Analysis/src/: model.py
Sentiment-Analysis/tests/: test_model.py
docs/: chatgpt-conversational-agent.md  index.md  machine-translation.md  preprocessing.md  question-answering.md  sentiment-analysis.md  text-summarization.md
nlp-nexus/preprocessing/: text_cleaning.py
nlp_nexus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nlp_nexus/preprocessing/: text_cleaning.py  text_preprocessing.py
nlp_nexus/sentiment-analysis/: text_preprocessing.py
tests/: test_text_cleaning.py
