[metadata]
name = nlp-nexus
version = 0.1.0
description = A portfolio of advanced NLP projects including sentiment analysis, question answering, conversational agents, and more.
long_description = file: README.md
long_description_content_type = text/markdown
author = Shilpa Musale
author_email = ishishiv3012@gmail.com
url = https://github.com/ishi3012/nlp-nexus
license = MIT

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    pandas
    nltk

[options.extras_require]
dev =
    pytest >= 6.2.0
    sphinx >= 4.0.0
    tox >= 3.24.0

[options.package_data]
* =
    *.txt
    *.md
    *.yaml
